--- a/src/global.css
+++ b/src/global.css
@@ -15,6 +15,31 @@
   --qwik-dark-purple: #713fc2;
 }
 
+[data-semi-transparent="true"] * {
+  /* hacky af, but this variable gets overridden by most builtin tw bg colours */
+  --tw-bg-opacity: 0.85 !important;
+}
+
+[data-semi-transparent="true"] .bg-white .bg-zinc-300 {
+  /* hacky af, but this variable gets overridden by most builtin tw bg colours */
+  --tw-bg-opacity: 1 !important;
+}
+
+@media(prefers-color-scheme: dark) {
+  [data-semi-transparent="true"] * {
+    /* hacky af, but this variable gets overridden by most builtin tw bg colours */
+    --tw-bg-opacity: 0.75 !important;
+  }
+}
+
+@media(max-width: 768px) {
+  [data-semi-transparent="true"] *,
+  [data-semi-transparent="true"] .bg-white .bg-zinc-100 {
+    /* hacky af, but this variable gets overridden by most builtin tw bg colours */
+    --tw-bg-opacity: 1 !important;
+  }
+}
+
 body {
   background-image: url(images/stars.png);
   background-attachment: fixed;
